feat(auth): relate user with session at login
