# @types/config.ts
@@ -1,7 +1,9 @@
-export interface MigrationConfig {
-  DB_HOST?: string;
-  USERNAME?: string;
-  PASSWORD?: string;
-  NS?: string;
-  DB?: string;
-}
+export type AppConfig = Readonly<{
+  DB_HOST: string;
+  USERNAME: string;
+  PASSWORD: string;
+  NS: string;
+  DB: string;
+  API_URL: string;
+  PORT: number;
+}>;
