# src/features/user/user.route.ts
@@ -1,8 +1,9 @@
-import { removeSession } from '@lib/auth.func';
-import { inSession } from '@lib/plugins/auth';
-import { ResponseSchema, SessionResponseSchema } from '@typebox';
+import { removeSession } from '@lib/helper/auth/auth.func';
+import { inSession } from '@lib/plugins/auth.plugin';
+import { ResponseSchema, ResultSchema, SessionResponseSchema } from '@typebox';
 import { ResponseType, SessionRequestBodyType, SessionResponseType } from '@types';
 import { FastifyPluginCallback } from 'fastify';
+import { StatusCodes } from 'http-status-codes';
 
 export default (async (server) => {
   server.register(inSession);
@@ -21,7 +22,7 @@ export default (async (server) => {
         payload: request.body.payload,
       };
     } catch (error) {
-      reply.code(500);
+      reply.code(StatusCodes.INTERNAL_SERVER_ERROR);
       if (error instanceof Error) {
         return {
           result: 'Ko',
@@ -50,5 +51,33 @@ export default (async (server) => {
     return {
       result: 'Ok',
     };
+  });
+
+  server.get<{ Body: SessionRequestBodyType, Reply: ResponseType }>('/sync/download', {
+    schema: {
+      response: {
+        default: ResultSchema,
+      },
+    },
+  }, async (request, reply) => {
+    try {
+      console.log(request.body.payload);
+
+      return {
+        result: 'Ok',
+      };
+    } catch (error) {
+      reply.code(StatusCodes.INTERNAL_SERVER_ERROR);
+      if (error instanceof Error) {
+        return {
+          result: 'Ko',
+          message: error.message,
+          error,
+        };
+      }
+      return {
+        result: 'Ko',
+      };
+    }
   });
 }) satisfies FastifyPluginCallback;
